--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,30 @@
 @font-face {
     font-family: "Roboto"; 
-    src: url("/fonts/roboto/Roboto.ttf"); 
+    src: url("/fonts/roboto/Roboto.woff2"); 
     font-style: normal; 
     font-weight: normal; 
     font-display: swap;
 } 
-
+@font-face {
+    font-family: "Roboto"; 
+    src: url("/fonts/roboto/Robotobold.woff2"); 
+    font-style: normal; 
+    font-weight: bold; 
+    font-display: swap;
+} 
 body {
     margin: 0;
     font-family: Roboto;
     font-style: normal;
     color: #000000;
     background: #F2F6F8;
+}
+ul {
+    margin-block-start: 0em;
+    margin-block-end: 0em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 0px;
 }
 /*Хедер*/
 header {
@@ -41,6 +54,13 @@ header {
     margin-left: 25px;
     margin-right: 35px;
 }
+.head-block__list {
+    width: 100%;
+    max-width: 995px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 .head-block__text {
     max-width: 230px;
     font-size: 14px;
@@ -67,20 +87,19 @@ header {
     color: #000000;
     padding: 5px;
 }
-.head-block__telephone img {
+.head-block__telephone::before {
+    content: url(../img/icons/phone.svg);
     margin-right: 13px;
 }
-.head-block__email img {
+.head-block__email::before {
+    content: url(../img/icons/email.svg);
     margin-right: 15px;
 }
-.head-block__twitter img {
+.head-block__twitter::before {
+    content: url(../img/icons/twitter.svg);
     margin-right: 8px;
 }
 /*конец хедер*/
-
-.main {
-    padding-left: 445px;
-}
 
 /*тело сайта*/
 .site-body {
@@ -90,7 +109,6 @@ header {
 }
 /*Левая сторона*/
 .left-side {
-    position: fixed;
     background: #fff;
     width: 445px;
     display: flex;
@@ -176,13 +194,17 @@ header {
     color: #000000;
     padding: 5px;
 }
-.left-side__telephone img {
+
+.left-side__telephone::before {
+    content: url(../img/icons/phone.svg);
     margin-right: 13px;
 }
-.left-side__email img {
+.left-side__email::before {
+    content: url(../img/icons/email.svg);
     margin-right: 15px;
 }
-.left-side__twitter img {
+.left-side__twitter::before {
+    content: url(../img/icons/twitter.svg);
     margin-right: 8px;
 }
 /*конец левой стороны*/
@@ -193,6 +215,7 @@ main {
 }
 .main-slider {
     max-width: 1356px;
+    margin-left: 0 !important;
 }
 .main-slider__item {
     position: relative;
@@ -230,6 +253,38 @@ main {
 .main-slider__button:active {
     bottom: -5px;
 }
+
+/* Style the tab */
+.content-list__tab {
+    overflow: hidden;
+    border: 1px solid #ccc;
+    background-color: #f1f1f1;
+}
+.content-list__tab button {
+    background-color: inherit;
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    transition: 0.3s;
+}
+.content-list__tab button:hover {
+    background-color: #ddd;
+}
+.content-list__tab button.active {
+    background-color: #ccc;
+}
+.content-list__content {
+    display: none;
+    padding: 6px 12px;
+    border: 1px solid #ccc;
+    border-top: none;
+}
+.content-list__content:first-child {
+    display: block;
+}
+
 /*конец main*/
 
 
