--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,25 @@ ul {
     margin-inline-start: 0px;
     margin-inline-end: 0px;
     padding-inline-start: 0px;
+    list-style-type: none;
+}
+p {
+    margin-block-start: 0em;
+    margin-block-end: 0em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+}
+.sr-only {
+    position: absolute;
+    margin: -1px;
+    padding: 0;
+    width: 1px;
+    height: 1px;
+    white-space: nowrap;
+    overflow: hidden;
+    border: 0;
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
 }
 /*Хедер*/
 header {
@@ -137,10 +156,6 @@ header {
 }
 .left-side__navigation ul {
     width: 100%;
-    margin-block-start: 0em;
-    margin-block-end: 0em;
-    padding-inline-start: 0px;
-    list-style-type: none;
 }
 .left-side__navigation ul li {
     margin-bottom: 20px;
@@ -216,6 +231,7 @@ main {
 .main-slider {
     max-width: 1356px;
     margin-left: 0 !important;
+    margin-bottom: 50px;
 }
 .main-slider__item {
     position: relative;
@@ -254,37 +270,146 @@ main {
     bottom: -5px;
 }
 
-/* Style the tab */
+/*Табы*/
+.content-list {
+    width: 100%;
+    max-width: 1356px;
+    margin-bottom: 80px;
+}
 .content-list__tab {
     overflow: hidden;
-    border: 1px solid #ccc;
-    background-color: #f1f1f1;
 }
 .content-list__tab button {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 21px;
+    color: #000000;
     background-color: inherit;
     float: left;
     border: none;
     outline: none;
     cursor: pointer;
-    padding: 14px 16px;
+    margin: 20px;
+    margin-bottom: 30px;
+    padding: 0px;
     transition: 0.3s;
 }
+.content-list__tab button:first-child {
+    margin-left: 35px;
+}
 .content-list__tab button:hover {
-    background-color: #ddd;
+    color: blue;
 }
 .content-list__tab button.active {
-    background-color: #ccc;
+    font-weight: bold;
 }
 .content-list__content {
     display: none;
-    padding: 6px 12px;
-    border: 1px solid #ccc;
-    border-top: none;
+    width: 100%;
+    min-height: 552px;
+}
+#advertising,
+#invitation {
+    background-color: #c5c5c5;
+    margin-left: 35px;
+    width: calc(100% - 35px);
 }
 .content-list__content:first-child {
     display: block;
 }
+.news-list {
+    display: flex;
+    justify-content: space-between;
+    align-items: stretch;
+    margin-left: 35px;
+}
+.news-list__item {
+    flex: 0 0 32%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+}
+.news-list__image {
+    width: 100%;
+}
+.news-list__link {
+    width: 100%;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 21px;
+    color: #000000;
+    margin-bottom: 30px;
+}
+.news-list__link:nth-child(2) {
+    margin-bottom: 20px;
+}
+.news-list__link:hover {
+    color: red;
+}
+.news-list__title {
+    font-size: 16px;
+    line-height: 24px;
+    color: #000000;
+    margin-bottom: 25px;
+}
+.news-list__item time {
+    font-size: 12px;
+    line-height: 24px;
+    color: #000000;
+}
 
+/*видео на главной*/
+.main-video {
+    width: 100%;
+    max-width: 1356px;
+}
+.main-video__block {
+    position: relative;
+    width: calc(100% - 35px);
+    height: 0;
+    padding-bottom: 56.25%;
+    background-color: #000000;
+    margin-left: 35px;
+}
+.main-video__media {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: none;
+}
+.main-video__button {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 136px;
+    height: 96px;
+    border: none;
+    background-color: transparent;
+    transform: translate(-50%, -50%);
+    display: none;
+}
+.main-video__button-icon {
+    width: 100%;
+    height: auto;
+    fill: #212121;
+    fill-opacity: 0.8;
+}
+.main-video__block:hover .main-video__button-icon,
+.main-video__button:focus .main-video__button-icon {
+    fill: red;
+    fill-opacity: 1;
+}
+.video--enabled {
+    cursor: pointer;
+}
+.video--enabled .main-video__button {
+    display: block;
+}
 /*конец main*/
 
 
