--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,4 +1,7 @@
 body {
-    margin: 0;
-    border-color: red;
+    background: green;
+    color: yellow;
+    padding: 0;
+    font-size: 32px;
+    margin-left: 20px;
 }
