--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,7 +1,10 @@
 body {
-    background: green;
     color: yellow;
     padding: 0;
     font-size: 32px;
     margin-left: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
