--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -764,9 +764,11 @@ input[type=range]:focus::-ms-fill-upper {
     margin-bottom: 20px;
 }
 
+
 /*Страница депутата*/
 .deputat {
     width: calc(100% - 35px);
+    max-width: 1356px;
     margin-left: 35px;
     margin-top: 35px;
     display: flex;
@@ -796,8 +798,10 @@ input[type=range]:focus::-ms-fill-upper {
 .deputat__image {
     width: auto;
     max-width: 100%;
+    height: 400px;
 }
 .deputat__contacts {
+    height: 360px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -868,12 +872,229 @@ input[type=range]:focus::-ms-fill-upper {
     box-shadow: 0 0 10px rgba(0,0,0,0.5);
 }
 .deputat__about {
+    width: 50%;
+    height: 400px;
+    position: relative;
+    overflow: hidden;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
     background-color: #ffffff;
 }
+.deputat__about.open {
+    height: max-content;
+}
+.deputat__about-title {
+    font-weight: bold;
+    font-size: 24px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 35px;
+}
+.deputat__about-text {
+    font-size: 14px;
+    line-height: 18px;
+    margin-left: 35px;
+    margin-bottom: 15px;
+}
+#about__more {
+    width: 100%;
+    height: 60px;
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, #FFFFFF 55%);
+    font-weight: bold;
+    font-size: 14px;
+    color: #247CCD;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    border: 0px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    padding-right: 30px;
+    padding-bottom: 10px;
+    cursor: pointer;
+    transition: all .3s;
+}
+.deputat__about.open #about__more {
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, transparent 100%);
+}
+
+.izbir-okrug {
+    width: calc(100% - 35px);
+    max-width: 1356px;
+    margin-left: 35px;
+    margin-top: 35px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+.izbir-okrug__title {
+    color: #0A0A0A;
+    font-weight: bold;
+    font-size: 24px;
+    margin-bottom: 25px;
+}
+.izbir-okrug__body {
+    width: 100%;
+    background-color: #ffffff;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+.izbir-okrug__image {
+    width: 100%;
+}
+.izbir-okrug__title-litle {
+    margin: 40px 0px;
+    margin-left: 35px;
+    font-weight: bold;
+    font-size: 18px;
+}
+.izbir-okrug__text {
+    width: calc(100% - 45px);
+    margin-left: 35px;
+    font-size: 14px;
+    line-height: 18px;
+    margin-bottom: 20px;
+}
+.thanks {
+    width: calc(100% - 35px);
+    max-width: 1356px;
+    margin-left: 35px;
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+.thanks__title {
+    font-weight: bold;
+    font-size: 24px;
+    color: #0A0A0A;
+}
+.thanks__list {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: stretch;
+}
+.thanks__item {
+    width: 19%;
+    background-color: #ffffff;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
+.thanks__image {
+    width: 96%;
+    max-width: 186px;
+    height: 240px;
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+.thanks__image img {
+    width: 100%;
+    height: auto;
+}
+.thanks__name {
+    width: 96%;
+    font-weight: bold;
+    font-size: 16px;
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 40px;
+}
+.about-deputat {
+    width: calc(100% - 35px);
+    max-width: 1356px;
+    margin-left: 35px;
+    margin-top: 40px;
+}
+.about-deputat__title {
+    color: #0A0A0A;
+    font-weight: bold;
+    font-size: 24px; 
+}
+.about-deputat__list {
+    width: 100%;
+}
+.about-deputat__item {
+    background-color: #ffffff;
+    display: flex;
+    justify-content: flex-start;
+    align-items: stretch;
+    margin-bottom: 25px;
+}
+.about-deputat__image {
+    margin: 40px;
+}
+.about-deputat__item-body {
+    width: 100%;
+    margin: 40px 0px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+.about-deputat__name {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 18px;
+}
+.about-deputat__text {
+    font-size: 16px;
+    line-height: 24px;
+}
+.about-deputat__info {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+}
+.about-deputat__date {
+    font-size: 12px;
+}
+.about-deputat__more {
+    font-size: 14px;
+    color: #247CCD;
+    position: absolute;
+    right: 50px;
+}
+
+/*Страница Депутаты*/
+.deputat-page .my-deputat__tab {
+    width: 100%;
+    margin-left: 35px;
+    margin-bottom: 35px;
+    background-color: #ffffff;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+.deputat-page .my-deputat__link::after {
+    content: url('../img/deputat/line.png');
+    margin-left: 25px;
+    position: relative;
+    top: 5px;
+}
+.deputat-page .my-deputat__list {
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+.deputat-page .my-deputat__item {
+    width: 14%;
+    margin-bottom: 2%;
+}
+
 
 /*конец тела сайта*/
 /*Футер*/
